// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default renders with footer 1`] = `
<div
  className="main"
>
  <WithStyles(Paper)
    className="content"
    elevation={0}
  >
    <React.Memo
      menuItems={
        Array [
          Object {
            "component": Object {
              "$$typeof": Symbol(react.lazy),
              "_ctor": [Function],
              "_result": null,
              "_status": -1,
            },
            "exact": true,
            "layout": Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "type": [Function],
            },
            "path": "/",
            "title": "Home",
          },
          Object {
            "component": Object {
              "$$typeof": Symbol(react.lazy),
              "_ctor": [Function],
              "_result": null,
              "_status": -1,
            },
            "exact": true,
            "layout": undefined,
            "path": "/todos",
            "title": "Todos",
          },
          Object {
            "component": Object {
              "$$typeof": Symbol(react.lazy),
              "_ctor": [Function],
              "_result": null,
              "_status": -1,
            },
            "displayFooter": false,
            "exact": true,
            "layout": undefined,
            "path": "/schedule",
            "title": "Scheduler",
          },
        ]
      }
    >
      Title
    </React.Memo>
    <Child />
  </WithStyles(Paper)>
  <footer
    className="footer"
  >
    <WithStyles(Typography)
      align="center"
      gutterBottom={true}
      variant="h6"
    >
      Footer
    </WithStyles(Typography)>
    <WithStyles(Typography)
      align="center"
      color="textSecondary"
      component="p"
      variant="subtitle1"
    >
      Something here to give the footer a purpose!
    </WithStyles(Typography)>
  </footer>
</div>
`;

exports[`Default renders without footer 1`] = `
<div
  className="main"
>
  <WithStyles(Paper)
    className="content"
    elevation={0}
  >
    <React.Memo
      menuItems={
        Array [
          Object {
            "component": Object {
              "$$typeof": Symbol(react.lazy),
              "_ctor": [Function],
              "_result": null,
              "_status": -1,
            },
            "exact": true,
            "layout": Object {
              "$$typeof": Symbol(react.memo),
              "compare": null,
              "type": [Function],
            },
            "path": "/",
            "title": "Home",
          },
          Object {
            "component": Object {
              "$$typeof": Symbol(react.lazy),
              "_ctor": [Function],
              "_result": null,
              "_status": -1,
            },
            "exact": true,
            "layout": undefined,
            "path": "/todos",
            "title": "Todos",
          },
          Object {
            "component": Object {
              "$$typeof": Symbol(react.lazy),
              "_ctor": [Function],
              "_result": null,
              "_status": -1,
            },
            "displayFooter": false,
            "exact": true,
            "layout": undefined,
            "path": "/schedule",
            "title": "Scheduler",
          },
        ]
      }
    >
      Title
    </React.Memo>
    <Child />
  </WithStyles(Paper)>
</div>
`;
